@@ -1,0 +1,11 @@
+{
+  "required": true,
+  "package": "com.github.iunius118.chilibulletweapons.mixin",
+  "compatibilityLevel": "JAVA_17",
+  "mixins": [
+    "MixinCrossbowItem"
+  ],
+  "injectors": {
+    "defaultRequire": 1
+  }
+}
